alignment of elements on landing page corrected

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -40,15 +40,16 @@ a {
   }
 
   section.landing-page {
-  padding-top: 5%;
-  text-align: center;
-  /*    @include outer-container; */
-  @include shift(1);
+    margin-top: 20%;
+    padding-top: 5%;
+    text-align: center;
+    /*    @include outer-container; */
+    @include shift(1);
 
-    .logo {
-      padding-bottom: 5%;
+      .logo {
+        padding-bottom: 5%;
+      }
     }
-  }
 }
 
 /*
@@ -120,6 +121,7 @@ header {
 
 footer {
   @include span-columns(12);
+  @include omega();
   display: block;
   height: 25px;
   /* margin-top: -2%;
@@ -131,7 +133,7 @@ footer {
   nav {
     @include span-columns(5 of 12);
     @include omega;
-    @include shift(5);
+    @include shift(5.5);
   }
 }
 
@@ -149,8 +151,8 @@ footer {
   /* float: left; */
   display: block;
   white-space: nowrap;
-  margin-bottom: 5px;
-
+  margin: 5px;
+  margin-left: 0;
   }
 }
   span.number {
